Fix Report Css
Fix the result input box for report because even though the text box is long, the entered text is not wrapper or overflowed when it is entered. To fix this I changed input into textarea.

--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -48,10 +48,10 @@
   left: 85px;
   font-size: 18px;
   text-indent: 10px;
+  font-family: 'Nunito', sans-serif;
 }
 
-
-/* .login_box_long {
+.login_box_long {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   border: 1px solid transparent;
@@ -61,12 +61,16 @@
   bottom: 370px;
   left: 85px;
   font-size: 18px;
-  text-indent: 10px;
-  padding: 4px 4px 60px 4px;
+  padding-left: 5px;
+  padding: 4px 4px 60px 10px;
   resize: none;
   margin-bottom: 20px;
-} */
+  resize: none;
+  font-family: 'Nunito', sans-serif;
+}
 
+/*container for image that goes on left half of the login big box
+helps to split screen*/
 .login_logo_pic {
   position: absolute;
   width: 330px;
@@ -75,6 +79,8 @@
   transform: translate(25%, 50%);
 }
 
+/*the styling for the image on the left half of box, crops it so it 
+fits the split*/
 .login_house_logo {
   position: relative;
   overflow: hidden;
@@ -89,6 +95,7 @@
   border-bottom-left-radius: 10px;
 }
 
+/*text styling*/
 .report_text {
   font-size: 15px;
   font-family: 'Nunito', sans-serif;
@@ -98,6 +105,7 @@
   margin-left: 63px;
   margin-right: 60px;
   left: 24px;
+  padding-right: 10px;
 
 }
 /*buttons*/
@@ -128,6 +136,7 @@
   margin: 20px;
 } 
 
+/*react icon styling*/
 .fcGoogle {
   position: relative;
   top: 2.5px;
